<?xml version="1.0" encoding="utf-8"?>
<resources>

       <string name="app_name">The Breaker</string>
    <string name="action_settings">Settings</string>
    <string name="main_header">What should break your tie?</string>
    <string name="button_rockpapersci">Rock Paper Scissors</string>
    <string name="button_dice">Roll Dice</string>
    <string name="button_randnumber">Random Number</string>
    <string name="button_cointoss">Coin Toss </string>
    <string name="title_activity_player_select">PlayerSelect</string>
    <string name="playerselect_header">How Many Players?</string>
    <string name="title_activity_rounds_select">RoundsSelect</string>
    <string name="roundsselect_header">How Many Wins To Break Tie?</string>
    <string name="button_2player">2 Players</string>
    <string name="button_3player">3 Players</string>
    <string name="button_4player">4 Players</string>
    <string name="view_resact">Activity</string>
    <string name="view_respla">Players</string>
    <string name="round1">1 Win</string>
    <string name="round2">2 Wins</string>
    <string name="round3">3 Wins</string>
    <string name="round4">4 Wins</string>
    <string name="title_activity_coin_toss_select">CoinTossSelect</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_die_select">DieSelect</string>
    <string name="title_activity_rock_paper_sci">RockPaperSci</string>
    <string name="title_activity_rand_number">RandNumber</string>
    <string name="title_activity_coin_toss">CoinToss</string>
    <string name="title_activity_victory_screen">VictoryScreen</string>
    <string name="title_activity_dice_roll">DiceRoll</string>
    <string name="dieselect_header">Choose Your Die</string>
    <string name="button_4side">4 Side</string>
    <string name="button_6side">6 Side</string>
    <string name="button_12side">12 Side</string>
    <string name="button_20side">20 Side</string>
    <string name="cointossselect_header">Player 1, Heads or Tails?</string>
    <string name="button_heads">Heads</string>
    <string name="button_tails">Tails</string>
    <string name="tv.or">Or</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="player3">Player 3</string>
    <string name="player4">Player 4</string>
    <string name="nextround">Next Round</string>
    <string name="results">Result:   </string>
    <string name="winstext">Wins:   </string>
    <string name="player4result">result</string>
    <string name="player3result">result</string>
    <string name="player2result">result</string>
    <string name="player1result">result</string>
    <string name="player1wins">Number of Wins</string>
    <string name="player2wins">Number of Wins</string>
    <string name="player3wins">Number of Wins</string>
    <string name="player4wins">Number of Wins</string>
    <string name="tosscoin">Flip A Coin</string>
    <string name="coinlanded">The coin landed on</string>
    <string name="player1chose">Chose:   </string>
    <string name="player1choice">HeadsorTails</string>

</resources>
