<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RockPaperSci" >

    <TextView
        android:id="@+id/player1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/player1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/player2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/player1"
        android:layout_below="@+id/player1"
        android:layout_marginTop="50dp"
        android:text="@string/player2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/player3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/player2"
        android:layout_below="@+id/player2"
        android:layout_marginTop="50dp"
        android:text="@string/player3"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/player4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/player3"
        android:layout_below="@+id/player3"
        android:layout_marginTop="50dp"
        android:text="@string/player4"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/button_round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:text="@string/nextround"/>

    <TextView
        android:id="@+id/resulttext1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player1"
        android:layout_centerHorizontal="true"
        android:text="@string/results"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/resulttext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/resulttext1"
        android:layout_below="@+id/player2"
        android:text="@string/results"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/resulttext3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/resulttext2"
        android:layout_below="@+id/player3"
        android:text="@string/results"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/resulttext4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/resulttext3"
        android:layout_below="@+id/player4"
        android:text="@string/results"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/player1result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/resulttext1"
        android:layout_toRightOf="@+id/resulttext1"
        android:text="@string/player1result"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/player2result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/resulttext2"
        android:layout_toRightOf="@+id/resulttext2"
        android:text="@string/player2result"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/player3result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/resulttext3"
        android:layout_alignBottom="@+id/resulttext3"
        android:layout_alignLeft="@+id/player2result"
        android:text="@string/player3result"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/player4result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/resulttext4"
        android:layout_toRightOf="@+id/resulttext4"
        android:text="@string/player2result"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/winstext1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resulttext1"
        android:layout_toLeftOf="@+id/player1result"
        android:text="@string/winstext"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/winstext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/resulttext2"
        android:layout_below="@+id/resulttext2"
        android:text="@string/winstext"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/winstext3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/resulttext3"
        android:layout_below="@+id/resulttext3"
        android:text="@string/winstext"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/winstext4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/resulttext4"
        android:layout_below="@+id/resulttext4"
        android:text="@string/winstext"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/player1wins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/winstext1"
        android:layout_alignBottom="@+id/winstext1"
        android:layout_alignLeft="@+id/player1result"
        android:text="@string/player1wins"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/player2wins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/winstext2"
        android:layout_alignBottom="@+id/winstext2"
        android:layout_alignLeft="@+id/player2result"
        android:text="@string/player2wins"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/player3wins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/winstext3"
        android:layout_alignBottom="@+id/winstext3"
        android:layout_alignLeft="@+id/player3result"
        android:text="@string/player3wins"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/player4wins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/winstext4"
        android:layout_alignBottom="@+id/winstext4"
        android:layout_alignLeft="@+id/player4result"
        android:text="@string/player4wins"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
