<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CoinTossSelect" >

    <TextView
        android:id="@+id/tv.CoinTossSelect.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/cointossselect_header"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_heads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv.CoinTossSelect.1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/button_heads" 
        android:onClick="heads"/>

    <TextView
        android:id="@+id/player1wins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_heads"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:textSize="20sp"
        android:text="@string/tv.or"/>

    <Button
        android:id="@+id/button_tails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/button_heads"
        android:layout_below="@+id/player1wins"
        android:layout_marginTop="33dp"
        android:text="@string/button_tails" 
        android:onClick="tails"/>
    
</RelativeLayout>
